--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -50,4 +50,15 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>
+	
+	
+	<!-- CORSFilter 설정 -->
+	<filter>
+		<filter-name>CORSFilter</filter-name>
+		<filter-class>com.javaex.filter.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORSFilter</filter-name>
+		<url-pattern>/*</url-pattern> <!-- 모든 요청에 매핑 -->
+	</filter-mapping>
 </web-app>
